<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_newregister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ventureapp.registro.newregister"
    android:background="@drawable/fondo2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView"
            android:textColor="@color/formulario"
            android:textSize="30dp"
            android:gravity="center"

            />

        <EditText
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nombre"
            android:id="@+id/idnombre"
            android:textColorHint="@color/formulario"
            android:gravity="center"
            android:textColor="@color/formulario"/>


        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/apellido"
            android:id="@+id/idapellido"
            android:textColorHint="@color/formulario"
            android:gravity="center"
            android:textColor="@color/formulario"/>

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/edad"
            android:id="@+id/idedad"
            android:textColorHint="@color/formulario"
            android:gravity="center"
            android:textColor="@color/formulario"/>

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/iddni"
            android:hint="@string/dni"
            android:textColorHint="@color/formulario"
            android:gravity="center"
            android:textColor="@color/formulario"/>

        <Button

            android:text="@string/boton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:id="@+id/idregistrar"
            android:onClick="alta"
            android:background="@color/Boton"
            android:textSize="25dp"
            android:textColor="@color/formulario"
            android:textAllCaps="false"/>

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/arbol"
            android:id="@+id/imageView" />

    </LinearLayout>

</RelativeLayout>
